add intencao routes
