# src/server.js
@@ -3,9 +3,9 @@ import * as dotenv from 'dotenv'
 import dbConnect from './config/db.config.js'
 import cors from 'cors'
 import userRouter from './routes/user.routes.js'
-import intencaoRouter from './routes/intencao.routes.js'
 import orgaoRouter from './routes/orgao.routes.js'
-import unidadeRouter from './routes/unidade.routes.js'
+import UnidadeRouter from './routes/unidade.routes.js'
+import intencaoRouter from "./routes/intencao.routes.js";
 import swaggerUi from 'swagger-ui-express'
 import swaggerFile from '../swagger_output.json' assert { type : "json"}
 
@@ -18,7 +18,7 @@ dbConnect()
 //instanciar a variável que vai ficar responsável pelo nosso servidor -> app
 const app = express()
 
-app.use(cors( { origin: process.env.REACT_URL } ))
+app.use(cors({origin: process.env.REACT_URL}))
 app.use(express.json())
 
 // rotas
@@ -26,7 +26,7 @@ app.use('/user', userRouter)
 
 app.use('/intencao', intencaoRouter)
 app.use('/orgao', orgaoRouter)
-app.use('/unidade', unidadeRouter)
+app.use('/unidade', UnidadeRouter)
 
 app.use('/doc', swaggerUi.serve)
 app.get('/doc', swaggerUi.setup(swaggerFile))
